Creating crud for each case