@@ -1,26 +1,19 @@
 FROM public.ecr.aws/a9c6e8c1/amazoncorretto:17-alpine as corretto-jdk
 
-# required for strip-debug to work
-RUN apk add --no-cache binutils
+WORKDIR application
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} ms-application.jar
+RUN java -Djarmode=layertools -jar ms-application.jar extract
 
-# Build small JRE image
-RUN jlink \
-         --verbose \
-         --add-modules java.base,java.compiler,java.desktop,java.instrument,java.management,java.naming,java.prefs,java.rmi,java.scripting,java.security.jgss,java.sql,jdk.httpserver,jdk.jfr,jdk.unsupported,jdk.crypto.ec,jdk.crypto.cryptoki \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /jre
-
-FROM alpine:latest
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-COPY --from=corretto-jdk /jre $JAVA_HOME
+FROM public.ecr.aws/a9c6e8c1/amazoncorretto:17-alpine
+WORKDIR application
+COPY --from=builder application/dependencies/ ./
+RUN true
+COPY --from=builder application/snapshot-dependencies/ ./
+RUN true
+COPY --from=builder application/spring-boot-loader/ ./
+RUN true
+COPY --from=builder application/application/ ./
 
 EXPOSE 8080
-COPY ./target/*.jar /app/test-blossom.jar
-WORKDIR /app
-
-CMD ["java", "-jar", "test-blossom.jar"]
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
